<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wheelzo</string>
    <string name="welcome_title">Welcome To</string>
    <string name="facebook_app_id">282192178572651</string>
    <string name="wheelzo_email">info@wheelzo.com</string>
    <string name="privacy_policy_url">https://wheelzo.com/privacy</string>
    <string name="support_email_title">Wheelzo Android Support</string>
    <string name="send_email_with">Send e-mail with...</string>

    <string name="delete_confirmation_title">Confirm Deleting Ride</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this ride? There\'s no going back.</string>
    <string name="delete_confirmation_yes">Confirm</string>
    <string name="delete_confirmation_no">Cancel</string>

    <string name="search_title">Search</string>
    <string name="create_title">Create a Ride</string>
    <string name="create_ride">Create Ride</string>
    <string name="ride_info">Ride Information</string>
    <string name="comments_label">Comments</string>
    <string name="view_profile">View Facebook Profile</string>
    <string name="view_comments">View Ride Comments</string>
    <string name="delete_ride">Delete Ride</string>
    <string name="contact_us">Contact Us</string>
    <string name="add_comment_hint">Add a comment...</string>
    <string name="send_button_text">Post</string>
    <string name="no_comments">This ride currently has no comments.</string>
    <string name="logout">Logout</string>
    <string name="request_ride">Request Ride</string>
    <string name="no_rides">You have not created\nany rides yet!</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="create_ride_missing_information">You must fill in all fields before creating this ride!</string>
    <string name="slogan">Keeping the rideshare community accountable</string>

    <!-- Tab Names -->
    <string name="all_rides_tab">All Rides</string>
    <string name="my_rides_tab">My Rides</string>
    <string name="my_account_tab">My Account</string>

    <!-- Search -->
    <string name="search_hint">Search for a destination...</string>

</resources>
