<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_purple"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/welcome_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:linksClickable="true"
        android:padding="20dp"
        android:text="@string/slogan"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="10dp" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/contact_us_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/blue_button"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

</LinearLayout>
