<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/new_comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/comment_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/add_comment_hint" />

        <Button
            android:id="@+id/post_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/purple_button"
            android:minHeight="20dp"
            android:text="@string/send_button_text"
            android:textColor="@color/white" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/new_comment_layout"
        android:scrollbars="vertical" />

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/no_comments_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_comments"
        android:visibility="gone" />

</RelativeLayout>